# ocp-tessellate-native

./: .gitignore  .gitmodules  CMakeLists-pypi.txt  CMakeLists.txt  MANIFEST.in  README.md  build.sh  env-conda.yml  env-old.yml  env.yml  setup.py  test.py
src/: tessellate.cpp
src/tessellator/: tessellate.cpp
